--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,27 +12,28 @@
     <title>{{ page.title }}</title>
   </head>
   <body>
-    <div class="container" style="width: 50em;">
-        <div class="container"><h1 class="text-center"><a class="text-dark" href="#">Håvard Pedersen</a></h1></div>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Forside <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Norsk blogg<br /><small>(mer meninger og politikk)</small></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Engelsk blogg<br /><small>(mostly technical stuff)</small></a>
-                </li>
-                </ul>
-            </div>
-        </nav>
-        <div class="container">
+    <div id="outer" class="container" style="width: 50em;">
+        <div id="header" class="container"><h1 class="text-center logo display-1"><a class="text-dark" href="#">Håvard Pedersen</a></h1>
+            <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Forside <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Norsk blogg<br /><small>(mer meninger og politikk)</small></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Engelsk blogg<br /><small>(mostly technical stuff)</small></a>
+                    </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div id="content" class="container">
         {{ content }}
         </div>
     </div>
