--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,4 +1,31 @@
 ---
 layout: default
 ---
-{{ content }}
+<div class="jumbotron">
+    <h1 class="display-5">Hjemmesiden til Håvard Pedersen!</h1>
+    <p class="lead">Systemutvikler • Webdings • Prokrastinator • Pappa • Apple fanboy • Skeptiker • Informasjonsjunkie • Liberalist • No more Mr. Nice Guy • GTD-praktikant • Ateist</p>
+    <hr class="my-4" />
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                    <p>Meg på nett</p>
+                    <ul>
+                        <li><a href="https://twitter.com/fuzzy76">Twitter</a></li>
+                        <li><a href="https://www.facebook.com/fuzzy76">Facebook</a></li>
+                        <li><a href="https://www.linkedin.com/in/haavardp/">LinkedIn</a></li>
+                        <li><a href="https://www.strava.com/athletes/6902791">Strava</a></li>
+                        <li><a href="https://github.com/fuzzy76">GitHub</a></li>
+                        <li><a href="https://www.goodreads.com/user/show/70089200-h-vard-pedersen">GoodReads</a></li>
+                    </ul>            
+            </div>
+            <div class="col-sm-6">
+                <p>Mine prosjekter</p>
+                <ul>
+                    <li><a href="https://serdeg.no">SerDeg.no</a></li>
+                    <li><a href="http://matfakta.net">Matfakta</a></li>
+                    <li><a href="https://www.facebook.com/hedenskjul/">Hedensk julekalender (Facebook)</a></li>
+                </ul>            
+            </div>        
+        </div>
+    </div>
+ </div>
