--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <!-- li class="nav-item active">
                         <a class="nav-link" href="#">Forside <span class="sr-only">(current)</span></a>
-                    </li>
+                    </li -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Norsk blogg<br /><small>(mer meninger og politikk)</small></a>
+                        <a class="nav-link" href="#">Norsk blogg<br /><small>(mest meninger og politikk)</small></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Engelsk blogg<br /><small>(mostly technical stuff)</small></a>
