Changed bootswatch from litera to simplex, moved width from inline to styles.css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,12 @@
 
         <!-- Bootstrap CSS -->
         <!-- link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" -->
-        <link href="https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0/litera/bootstrap.min.css" rel="stylesheet" integrity="sha384-MmFGSHKWNFDZYlwAtfeY6ThYRrYajzX+v7G4KVORjlWAG0nLhv0ULnFETyWGeQiU" crossorigin="anonymous">
+        <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.0.0/simplex/bootstrap.min.css" rel="stylesheet" integrity="sha384-AuEr11i558k+Xa9Spnw45VKJGyQKeqddQG1ASFxPamSRm5fl/sQYzrRK4H37gJ7W" crossorigin="anonymous">
         <link href="{{ "/assets/styles.css" | absolute_url }}" rel="stylesheet" />
         <title>{{ page.title }}</title>
     </head>
     <body>
-        <div id="outer" class="container" style="width: 50em;">
+        <div id="outer" class="container">
             <div id="header" class="container"><h1 class="text-center logo display-1"><a class="text-dark" href="#">Håvard Pedersen</a></h1>
                 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
