Added footer with repo link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,9 @@
             <div id="content" class="container">
             {{ content }}
             </div>
+            <div id="footer" class="container text-center">
+                Powered by <a href="https://github.com/fuzzy76/fuzzy76.github.io/">GitHub Pages</a>.
+            </div>
         </div>
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
