--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,10 @@
                             <a class="nav-link" href="#">Forside <span class="sr-only">(current)</span></a>
                         </li -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Norsk blogg<br /><small>(mest meninger og politikk)</small></a>
+                            <a class="nav-link" href="/norsk/">Norsk blogg<br /><small>(mest meninger og politikk)</small></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Engelsk blogg<br /><small>(mostly technical stuff)</small></a>
+                            <a class="nav-link" href="/english/">Engelsk blogg<br /><small>(mostly technical stuff)</small></a>
                         </li>
                         </ul>
                     </div>
