--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,6 @@
 ---
 layout: default
 ---
+<h1>{{ page.title }} <small class="text-muted">{{ page.date | date: "%e.%m.%y" }}</small></h1>
 {{ content }}
+<!-- Sharing, comments, etc. -->
