--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,24 +14,18 @@
     <body>
         <div id="outer" class="container">
             <div id="header" class="container"><h1 class="text-center logo display-4"><a class="text-dark" href="/">Håvard Pedersen</a></h1>
-                <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                        <!-- li class="nav-item active">
-                            <a class="nav-link" href="#">Forside <span class="sr-only">(current)</span></a>
-                        </li -->
-                        <li class="nav-item">
-                            <a class="nav-link" href="/norsk/">Norsk blogg<br /><small>(mest meninger og politikk)</small></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/english/">Engelsk blogg<br /><small>(mostly technical stuff)</small></a>
-                        </li>
-                        </ul>
-                    </div>
-                </nav>
+                <ul class="nav nav-pills justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/norsk/">
+                            Norsk<br /><small>(mest meninger og politikk)</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="/english/">
+                            English<br /><small>(mostly technical stuff)</small>
+                        </a>
+                    </li>
+                </ul>
             </div>
             <div id="content" class="container">
             {{ content }}
