--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,4 +3,27 @@ layout: default
 ---
 <h1>{{ page.title }} <small class="text-muted">{{ page.date | date: "%e.%m.%y" }}</small></h1>
 {{ content }}
-<!-- Sharing, comments, etc. -->
+<!-- Should probably do a flag thing to disable comments -->
+<div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+var disqus_developer = 1; // @TODO Comment out when the site is live
+var disqus_config = function () {
+this.page.url = 'http://fuzzy76.net{{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
+{% if page.wpid %}
+    this.page.identifier = '{{ page.wpid }} {{ page.guid }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+{% else %}
+    this.page.identifier = '{{ page.id }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+{% endif %}
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://fuzzy76.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
