--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html>
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
@@ -10,6 +10,7 @@
         <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.0.0/lux/bootstrap.min.css" rel="stylesheet" integrity="sha384-GxhP7S92hzaDyDJqbdpcHqV5cFflxAx0Yze/X7vUONp43KK1E8eUWaJIMkit3D0R" crossorigin="anonymous">
         <link href="{{ "/assets/styles.css" | absolute_url }}" rel="stylesheet" />
         <title>{{ page.title }}</title>
+        {% seo %}
     </head>
     <body>
         <div id="outer" class="container">
