Changed bootswatch to flatly, fixing layout on mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,14 +7,14 @@
 
         <!-- Bootstrap CSS -->
         <!-- link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" -->
-        <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.0.0/lux/bootstrap.min.css" rel="stylesheet" integrity="sha384-GxhP7S92hzaDyDJqbdpcHqV5cFflxAx0Yze/X7vUONp43KK1E8eUWaJIMkit3D0R" crossorigin="anonymous">
+        <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.0.0/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-jb1k1ntK2AaXuVTIiFXgcGvjcWQrYlrsxipJRLPdwnr1sHBRqSLowOD2q3dIL5KG" crossorigin="anonymous">
         <link href="{{ "/assets/styles.css" | absolute_url }}" rel="stylesheet" />
         <title>{{ page.title }}</title>
         {% seo %}
     </head>
     <body>
         <div id="outer" class="container">
-            <div id="header" class="container"><h1 class="text-center logo display-4"><a class="text-dark" href="/">Håvard Pedersen</a></h1>
+            <div id="header" class="container"><div id="sitename" class="text-center h1"><a href="/">Håvard Pedersen</a></div>
                 <ul class="nav nav-pills justify-content-center">
                     <li class="nav-item">
                         <a class="nav-link active" href="/norsk/">
