Added search with Google CSE

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
             {{ content }}
             </div>
             <div id="footer" class="container text-center">
+                <form action="/sok/"><input name="q" type="search" placeholder="Søk i nettstedet" /></form>
                 Powered by <a href="https://github.com/fuzzy76/fuzzy76.github.io/">GitHub Pages</a>.
             </div>
         </div>
