--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
                             Norsk<br /><small>(mest meninger og politikk)</small>
                         </a>
                     </li>
-                    <li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/english/">
                             English<br /><small>(mostly technical stuff)</small>
                         </a>
