Activate correct menu based on current page category

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,12 @@
             <div id="header" class="container"><div id="sitename" class="text-center h1"><a href="/">Håvard Pedersen</a></div>
                 <ul class="nav nav-pills justify-content-center">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/norsk/">
+                        <a class="nav-link{% if page.categories contains "Norsk" %} active{% endif %}" href="/norsk/">
                             Norsk<br /><small>(mest meninger og politikk)</small>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/english/">
+                        <a class="nav-link{% if page.categories contains "English" %} active{% endif %}" href="/english/">
                             English<br /><small>(mostly technical stuff)</small>
                         </a>
                     </li>
