--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,11 @@
                             English<br /><small>(mostly technical stuff)</small>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-muted" href="/posts/">
+                            <small>Alle poster</small>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <div id="content" class="container">
