--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -6,7 +6,7 @@ layout: page
     {% if post.hidden != "true" %}
         {% if forloop.index < 5 %}
             <h2>
-                <a href="{{ post.url | absolute_url }}">{{ post.title }}
+                <a href="{{ post.url }}">{{ post.title }}
                 <small class="text-muted">{{ post.date | date: "%e.%m.%y" }}</small>
             </a>
             </h2>
@@ -19,7 +19,7 @@ layout: page
             </p>
         {% else %}
             <h2 class="h3">
-                <a href="{{ post.url | absolute_url }}">{{ post.title }}</a>
+                <a href="{{ post.url }}">{{ post.title }}</a>
                 <small class="text-muted">{{ post.date | date: "%e.%m.%y" }}</small>                    
             </h2>
         {% endif %}
