Let feed plugin handle autodiscovery

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="openid2.provider" href="https://www.google.com/accounts/o8/ud?source=profiles" />
         <link rel="openid2.local_id" href="http://www.google.com/profiles/haavard.pedersen" />
-        <link rel="alternate" type="application/atom+xml" title="Atom feed" href="/feed/" />
+        {% feed_meta %}
         <!-- Bootstrap CSS -->
         <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.0.0/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-jb1k1ntK2AaXuVTIiFXgcGvjcWQrYlrsxipJRLPdwnr1sHBRqSLowOD2q3dIL5KG" crossorigin="anonymous">
         <link href="{{ "/assets/styles.css" }}" rel="stylesheet" />
