Moved and enlarged search

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,11 +42,15 @@
                     </li>
                 </ul>
             </div>
+            <div class="container">
+                <form class="text-center" action="/sok/">
+                    <input size="40" class="mx-auto" name="q" type="search" placeholder="Søk i nettstedet" />
+                </form>
+            </div>
             <div id="content" class="container">
             {{ content }}
             </div>
             <div id="footer" class="container text-center">
-                <form action="/sok/"><input name="q" type="search" placeholder="Søk i nettstedet" /></form>
                 Powered by <a href="https://github.com/fuzzy76/fuzzy76.github.io/">GitHub Pages</a>.
             </div>
         </div>
