Added frontpage to menu, and adjustment

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,13 +26,18 @@
             <div id="header" class="container"><div id="sitename" class="text-center h1"><a href="/">Håvard Pedersen</a></div>
                 <ul class="nav nav-pills justify-content-center">
                     <li class="nav-item">
+                        <a class="nav-link" href="/">
+                            Forside
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link{% if page.categories contains "Norsk" %} active{% endif %}" href="/norsk/">
-                            Norsk<br /><small>(mest meninger og politikk)</small>
+                            Norsk blogg<br /><small>(mest meninger og politikk)</small>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link{% if page.categories contains "English" %} active{% endif %}" href="/english/">
-                            English<br /><small>(mostly technical stuff)</small>
+                            English blog<br /><small>(mostly technical stuff)</small>
                         </a>
                     </li>
                     <li class="nav-item">
