--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,3 +28,31 @@ layout: default
         </div>
     </div>
  </div>
+ <div class="container">
+     <div class="row">
+         <div class="col-sm-6">
+            <h2>Siste 3 norske:</h2>
+            <ul class="list-unstyled">
+                {% for post in site.categories.Norsk limit:3 %}
+                    <li>
+                        <a href="{{ post.url }}">{{ post.title }}
+                        <small class="text-muted">{{ post.date | date: "%e.%m.%y" }}</small>
+                        </a>
+                    </li>
+                {% endfor %}    
+            </ul>
+         </div>
+         <div class="col-sm-6">
+            <h2>Siste 3 engelske:</h2>
+            <ul class="list-unstyled">
+                {% for post in site.categories.English limit:3 %}
+                    <li>
+                        <a href="{{ post.url }}">{{ post.title }}
+                        <small class="text-muted">{{ post.date | date: "%e.%m.%y" }}</small>
+                        </a>
+                    </li>
+                {% endfor %}    
+            </ul>
+            </div>
+        </div>
+ </div>
