--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,7 @@ layout: default
 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 //var disqus_developer = 1;
+var disqus_shortname = 'fuzzy76';
 var disqus_config = function () {
 this.page.url = 'http://fuzzy76.net{{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
 {% if page.wpid %}
@@ -25,7 +26,7 @@ this.page.url = 'http://fuzzy76.net{{ page.url }}';  // Replace PAGE_URL with yo
 {% else %}
     this.page.identifier = '{{ page.id }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 {% endif %}
-
+};
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
 s.src = 'https://fuzzy76.disqus.com/embed.js';
