A lot of http-to-https tweaks

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
 //var disqus_developer = 1;
 var disqus_shortname = 'fuzzy76';
 var disqus_config = function () {
-this.page.url = 'http://fuzzy76.net{{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = 'https://fuzzy76.net{{ page.url }}';  // Replace PAGE_URL with your page's canonical URL variable
 {% if page.wpid %}
     this.page.identifier = '{{ page.wpid }} {{ page.guid }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 {% else %}
