Presisering av min liberalist-type

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="jumbotron">
-    <p class="lead">Systemutvikler • Webdings • '76-modell • Prokrastinator • Pappa • Apple fanboy • Skeptiker • Informasjonsjunkie • Liberalist • No more Mr. Nice Guy • GTD-praktikant • Ateist</p>
+    <p class="lead">Systemutvikler • Webdings • '76-modell • Prokrastinator • Pappa • Apple fanboy • Skeptiker • Informasjonsjunkie • Sosialliberalist • No more Mr. Nice Guy • GTD-praktikant • Ateist</p>
     <hr class="my-4" />
     <div class="container">
         <div class="row">
