Added keybase link to frontpage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,7 @@ layout: default
                         <li><span class="fa-li"><i class="fab fa-linkedin"></i></span><a href="https://www.linkedin.com/in/haavardp/">LinkedIn</a></li>
                         <li><span class="fa-li"><i class="fab fa-strava"></i></span><a href="https://www.strava.com/athletes/6902791">Strava</a></li>
                         <li><span class="fa-li"><i class="fab fa-twitter"></i></span><a href="https://twitter.com/fuzzy76">Twitter</a></li>
+                        <li><span class="fa-li"><i class="fab fa-keybase"></i></span><a href="https://keybase.io/fuzzy76">Keybase</a></li>
                     </ul>            
             </div>
             <div class="col-sm-6">
